--- a/fastcalc/fastcalc/FastCalc/FastCalc-Info.plist
+++ b/fastcalc/fastcalc/FastCalc/FastCalc-Info.plist
@@ -11,6 +11,8 @@
 	<key>CFBundleIconFiles</key>
 	<array>
 		<string>icon-114x114.png</string>
+		<string>icon.png</string>
+		<string>icon@2x.png</string>
 	</array>
 	<key>CFBundleIcons</key>
 	<dict>
@@ -19,6 +21,8 @@
 			<key>CFBundleIconFiles</key>
 			<array>
 				<string>icon-114x114.png</string>
+				<string>icon.png</string>
+				<string>icon@2x.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<true/>
