--- a/fastcalc/fastcalc/FastCalc/FastCalc-Info.plist
+++ b/fastcalc/fastcalc/FastCalc/FastCalc-Info.plist
@@ -54,5 +54,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>rouble.otf</string>
+	</array>
 </dict>
 </plist>
